--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
                 <!-- Here in src replace the given link with your image link -->
-                <img src="img/images (4).jpg" alt="">
+                <img src="images (4).jpg" alt="">
             </div>
 
         </div>
@@ -79,7 +79,7 @@
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
                 <!-- Here in src replade the given link with your secondary image link -->
-                <img src="img/images (4).jpg" alt="" style="width: 50%;">
+                <img src="images (4).jpg" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
@@ -101,7 +101,7 @@
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
         <div class="services-container flex s-around h-50">
         <div class=" skills-left flex s-center items-center">
-            <img src="img/download.jpg" alt="">
+            <img src="download.jpg" alt="">
         </div>
 
         <div class="skills-right flex items-center">
@@ -126,20 +126,20 @@
         <h1 class=" t-center my-2 t-white f-2">Services</h1>
         <div class="services-container flex s-center">
             <div class="test-item flex f-col items-center">
-                <img src="img/img2.jpg" alt="">
+                <img src="img2.jpg" alt="">
                 <h1 class="t-white poppins">Web Development</h1>
                 <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
                     have their own websites. As my passion I will help you to build your clean and fast website for your
                     startup or your bussines.</p>
             </div>
             <div class="test-item flex f-col items-center">
-                <img src="img/img3.jpg" alt="">
+                <img src="img3.jpg" alt="">
                 <h1 class="t-white poppins">Social Media Management</h1>
                 <p class="t-white poppins">Social Media is the power of future. So I'll help in developing brand
                     awareness thow managing your social media handles and will to increase customer loyalty.</p>
             </div>
             <div class="test-item flex f-col items-center">
-                <img src="img/img4.jpg" alt="">
+                <img src="img4.jpg" alt="">
                 <h1 class="t-white poppins">Growth Strategies</h1>
                 <p class="t-white poppins">As a web developer also I will help your brand to grow up . I will provide
                     the growth strategies for your brand. And also help in searching techniques for your brand.</p>
@@ -154,7 +154,7 @@
         <div class="projects-container flex s-center">
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="img/img6.jpg" alt="">
+                    <img src="img6.jpg" alt="">
                 </div>
                 <h1 class="t-white poppins">Weather App</h1>
                 <p class="t-white poppins"> A weather app using HTML, CSS and JavaScript. Fetch the weather from the
@@ -168,7 +168,7 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-one">
-                    <img src="img/images13.jpg" alt="">
+                    <img src="images13.jpg" alt="">
                 </div>
                 <h1 class="t-white poppins">Burger King</h1>
                 <p class="t-white poppins">A simple landing page using HTML and CSS. This webiste is for burger shop who
@@ -182,7 +182,7 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-two">
-                    <img src="img/image999.jpg" alt="">
+                    <img src="image999.jpg" alt="">
                 </div>
 
                 <h1 class="t-white poppins">MBA Chai Wala</h1>
@@ -198,7 +198,7 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-three">
-                    <img src="img/image56.jpg" alt="">
+                    <img src="image56.jpg" alt="">
                 </div>
 
                 <h1 class="t-white poppins">Magic Notes App</h1>
@@ -214,7 +214,7 @@
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-three">
-                    <img src="img/image22.jpg" alt="">
+                    <img src="image22.jpg" alt="">
                 </div>
 
                 <h1 class="t-white poppins">Login Form</h1>
